--- a/quiz_app/templates/home.html
+++ b/quiz_app/templates/home.html
@@ -11,7 +11,7 @@
     <title>Quiz City</title>
   </head>
   <body>
-<div class="alert alert-danger" role="alert">Quiz City - work on progress
+<div class="alert alert-danger" role="alert">Quiz City - work in progress
 </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
