--- a/quiz_app/templates/join_quiz.html
+++ b/quiz_app/templates/join_quiz.html
@@ -2,7 +2,26 @@
 {% load static %}
 {% block content %}
 
-
-
+  <body>
+        <header class="masthead">
+            <div class="container d-flex h-100 align-items-center">
+                <div class="mx-auto text-center">
+                    <h1 class="mx-auto my-0 text-uppercase">Join Quiz</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Quiz City loading...</h2>
+                    <div class="row">
+  						<div class="col">
+    					<input type="text" class="form-control" placeholder="First name" aria-label="Enter The Code">
+  						</div>
+                    <a class="btn btn-primary js-scroll-trigger" href="{% url 'login' %}">Enter</a>
+                </div>
+                </div>
+            </div>
+        </header>
+        <section class="contact-section bg-black">
+            <div class="container">
+            </div>
+          </section>
 
 {% endblock %}
+
+    
