--- a/quiz_app/templates/home.html
+++ b/quiz_app/templates/home.html
@@ -8,8 +8,8 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Quiz City</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Quiz City loading...</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="">Create Quiz</a>
-                    <a class="btn btn-primary js-scroll-trigger" href="">Join Quiz</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="{% url 'create_quiz' %}">Create Quiz</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="{% url 'join_quiz' %}">Join Quiz</a>
                 </div>
             </div>
         </header>
