--- a/quiz_app/templates/join_quiz.html
+++ b/quiz_app/templates/join_quiz.html
@@ -10,7 +10,7 @@
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Quiz City loading...</h2>
                     <div class="row">
   						<div class="col">
-    					<input type="text" class="form-control" placeholder="First name" aria-label="Enter The Code">
+    					<input type="text" class="form-control" placeholder="Enter The Code" aria-label="Enter The Code">
   						</div>
                     <a class="btn btn-primary js-scroll-trigger" href="{% url 'login' %}">Enter</a>
                 </div>
