--- a/quiz_app/templates/join_quiz.html
+++ b/quiz_app/templates/join_quiz.html
@@ -7,7 +7,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Join Quiz</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Quiz City loading...</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Join Quiz loading...</h2>
                     <div class="row">
   						<div class="col">
     					<input type="text" class="form-control" placeholder="Enter The Code" aria-label="Enter The Code">
