--- a/quiz_app/templates/create_quiz.html
+++ b/quiz_app/templates/create_quiz.html
@@ -7,7 +7,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Create Quiz</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Quiz City loading...</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Create Quiz loading...</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="{% url 'register' %}">Register</a>
                     <a class="btn btn-primary js-scroll-trigger" href="{% url 'login' %}">Login</a>
                 </div>
