--- a/quiz_app/templates/base.html
+++ b/quiz_app/templates/base.html
@@ -13,7 +13,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Quiz City</title>
-        <link rel="icon" type="image/x-icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-vector%2Fcity-logo-template_838025.htm&psig=AOvVaw18gt8ebswlhkv2ULXUULd_&ust=1612460336229000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCTmpuAze4CFQAAAAAdAAAAABAE" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
